i18n/es/docusaurus-plugin-content-docs/version-3.1.0/readme.mdx
---
title: Leer primero
slug: /
---

import DocCard from '@theme/DocCard';

Esta documentacion tiene como objetivo explicar como funciona RaidProtect. No dudes en enviarnos tus comentarios para que podamos mejorarla.
No olvides [unirte a nuestro servidor de Discord](https://raidprotect.bot/discord) para mantenerte informado sobre las ultimas actualizaciones del proyecto. Tambien puedes contactar a nuestro equipo de soporte, quienes responderan tus preguntas sobre el uso del bot. 😄

## 🚀 Comenzar con RaidProtect {#start}

Para empezar a usar RaidProtect, simplemente invitalo a tu servidor usando el siguiente enlace.

<DocCard item={{ type: 'link', href: 'https://raidprotect.bot/invite', label: 'Invitar a RaidProtect' }} />
<br />

:::danger
Atencion, **copias del bot** estan circulando **usando el nombre RaidProtect**, solo invitalo desde nuestro sitio web oficial.
:::

### Requisitos {#requirement}

Para asegurar el correcto funcionamiento de RaidProtect:
1. **Otorga el permiso de Administrador** a RaidProtect. Esto le permite moderar automaticamente todos tus canales.
2. **Coloca su rol al mismo nivel que los administradores de tu servidor**. El sistema de permisos no permite que RaidProtect sancione a usuarios con un rol superior al suyo.

### Instalacion {#install}

Una vez que RaidProtect se haya agregado a tu servidor, ejecuta el comando [`/setup`](./setup.md#install).

<DocCard item={{ type: 'link', href: '/docs/3.1.0/setup', docId: 'setup', label: 'Instalacion guiada' }} />
<br />

:::note
Para los menos aventureros (o los mas impacientes), puedes simplemente leer las instrucciones del comando [`/setup`](./setup.md#recommended) que resume la informacion principal de cada funcion.
:::

### Uso {#use}

Consulta las diferentes secciones de esta documentacion para descubrir todas las funciones que ofrece RaidProtect.

<DocCard item={{ type: 'link', href: '/docs/3.1.0/language', docId: 'language', label: 'Idiomas disponibles' }} />
<br />
<DocCard item={{ type: 'category', href: '/docs/3.1.0/features', label: 'Funciones', description: 'Documentacion de cada una de nuestras funciones.' }} />
<br />
<DocCard item={{ type: 'category', href: '/docs/3.1.0/guides', label: 'Nuestras guias', description: 'Guias para ayudarte de la mejor manera posible.' }} />
<br />
<DocCard item={{ type: 'category', href: '/docs/3.1.0/useful-links', label: 'Enlaces utiles', description: 'Diversos enlaces utiles para RaidProtect.' }} />
<br />
